# theatron

./: .gitattributes  .gitignore  .kanon-ci.toml  .kanon-license-fingerprint  .kanon-license-fingerprint.toml  .kanon-lint-baseline.toml  .kanon.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG-v1.3.0-section.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GLOSSARY.md  LICENSE  README.md  RUNBOOK.md  SECURITY.md  clippy.toml  deny.toml  llms.txt  osv-scanner.toml  release-please-config.json  rust-toolchain.toml
.cargo/: audit.toml
.config/: nextest.toml
.github/: SECURITY.md  dependabot.yml  no-ai-attribution-patterns.txt
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  gate-attestation.yml  no-ai-attribution.yml  release-please.yml  security.yml  stale.yml
_llm/: architecture.toml  current_state.toml  decisions.toml  glossary.toml
_meta/: CHANGELOG.md  DASHBOARD_LIFECYCLE.md  INTEGRATION.md  PLATFORM_COVERAGE.md  RELEASE.md  ROADMAP.md  SEMVER.md  STATE.md
crates/basanos/standards/: LABELS.md
crates/bathron/: Cargo.toml
crates/bathron/src/: dialogs.rs  lib.rs  logging.rs  notifications.rs  settings.rs  settings_tests.rs
crates/dokimasia/: Cargo.toml
crates/dokimasia/src/: cli.rs  css.rs  diagnostic.rs  lib.rs  linter.rs  main.rs  manifest.rs  render.rs  rust.rs  tokens.rs
crates/gramma/: Cargo.toml
crates/gramma/src/: diff.rs  diff_git.rs  diff_tests.rs  diff_tests_predicates.rs  highlight.rs  lib.rs  syntax.rs
crates/keryx/: Cargo.toml
crates/keryx/src/: error.rs  error_tests.rs  lib.rs  response.rs  sse.rs  sse_tests.rs  url.rs
crates/mekhane/: Cargo.toml
crates/mekhane/examples/: hotkey_registration.rs
crates/mekhane/src/: hooks.rs  hotkey.rs  lib.rs  menus.rs  tray.rs
crates/parodos/: Cargo.toml
crates/parodos/benches/: fuzzy.rs  hyperlink.rs  sanitize.rs
crates/parodos/src/: clipboard.rs  env.rs  fuzzy.rs  highlight.rs  hyperlink.rs  hyperlink_tests.rs  layout.rs  lib.rs  sanitize.rs  text.rs  theme.rs  theme_tests.rs  widgets.rs
crates/parodos/src/command_runner/: mod.rs
crates/parodos/src/theme/: palette.rs
crates/skeue/: Cargo.toml
crates/skeue/src/: activity_row.rs  badge.rs  code_block.rs  conn_indicator.rs  diff_hunk.rs  diff_line.rs  empty_state.rs  error_state.rs  lib.rs  metric_tile.rs  queue_table.rs  sparkline.rs  spinner.rs  status_pill.rs  table.rs  toast.rs  virtual_list.rs
crates/theatron-blitz/: Cargo.toml
crates/theatron-blitz/src/: lib.rs
crates/theatron-components/: Cargo.toml
crates/theatron-components/src/: code_block.rs  diff_hunk.rs  diff_line.rs  lib.rs  metric_tile.rs  queue_table.rs  sparkline.rs  status_pill.rs  table.rs  toast.rs  virtual_list.rs
crates/theatron-core/: Cargo.toml
crates/theatron-core/src/: lib.rs  theme.rs
crates/theatron-lint/: Cargo.toml
crates/theatron-lint/src/: css.rs  diagnostic.rs  lib.rs  linter.rs  main.rs  render.rs  rust.rs
crates/theatron-markdown/: Cargo.toml
crates/theatron-markdown/src/: diff.rs  highlight.rs  lib.rs
crates/theatron-net/: Cargo.toml
crates/theatron-net/src/: error.rs  lib.rs  sse.rs
crates/theatron-platform/: Cargo.toml
crates/theatron-platform/src/: lib.rs
crates/theatron-tui/: Cargo.toml
crates/theatron-tui/src/: lib.rs
crates/themelion/: Cargo.toml
crates/themelion/src/: lib.rs  provider.rs  theme.rs  theme_tests.rs
examples/full_app/: Cargo.toml  README.md
examples/full_app/src/: body.rs  main.rs
examples/minimal/: Cargo.toml  README.md
examples/minimal/src/: main.rs
examples/tray_smoke/: Cargo.toml  README.md
examples/tray_smoke/src/: main.rs
projects/kanon/planning/: dispatch-contracts.json
workflow/: AUDIT-LENSES.md  audit-plan.toml  audit-units.toml  kanon.toml
