[workspace]
resolver = "3"
members = [
    "crates/theatron-core",
    "crates/theatron-platform",
    "crates/theatron-net",
    "crates/theatron-components",
    "crates/theatron-markdown",
    "crates/theatron-blitz",
    "crates/theatron-tui",
    "crates/theatron-lint",
    "examples/minimal",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://forge.forkwright.com/forkwright/theatron"
repository = "https://forge.forkwright.com/forkwright/theatron"
rust-version = "1.85"
authors = ["forkwright"]

[workspace.dependencies]
# Theatron crates (path)
theatron-core = { version = "0.1.0", path = "crates/theatron-core" }
theatron-platform = { version = "0.1.0", path = "crates/theatron-platform" }
theatron-net = { version = "0.1.0", path = "crates/theatron-net" }
theatron-components = { version = "0.1.0", path = "crates/theatron-components" }
theatron-markdown = { version = "0.1.0", path = "crates/theatron-markdown" }
theatron-blitz = { version = "0.1.0", path = "crates/theatron-blitz" }
theatron-tui = { version = "0.1.0", path = "crates/theatron-tui" }
theatron-lint = { version = "0.1.0", path = "crates/theatron-lint" }

# UI framework
# WHY: Pin dioxus to an exact patch version, fleet-wide. Dioxus
# `EventHandler<T>` (and other types parameterized over user types) is
# a different concrete type at every patch release; if theatron and a
# downstream consumer (proskenion, future chalkeion) resolve to
# different patches, trait resolution breaks across the crate boundary
# even though both compile in isolation. Caught by QA wave 2 #22 (M-10).
# Bump deliberately, never via auto-resolution. proskenion/Cargo.toml
# uses the same exact pin.
dioxus = "=0.7.6"
dioxus-native = "=0.7.6"

# Network / streaming
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
eventsource-stream = "0.2"
bytes = "1"
futures-core = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"

# Markdown / syntax highlighting
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-onig"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
snafu = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Lint (theatron-lint)
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
regex = "1"
ignore = "0.4"
codespan-reporting = "0.11"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
