[workspace]
resolver = "3"
members = [
    "crates/themelion",
    "crates/bathron",
    "crates/keryx",
    "crates/skeue",
    "crates/gramma",
    "crates/mekhane",
    "crates/parodos",
    "crates/dokimasia",
    "examples/minimal",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
homepage = "https://forge.forkwright.com/forkwright/theatron"
repository = "https://forge.forkwright.com/forkwright/theatron"
rust-version = "1.85"
authors = ["forkwright"]

[workspace.dependencies]
# Theatron crates (path).
#
# WHY no `theatron-` prefix: per fleet naming rule (memory:
# feedback_no_parent_child_crate_names) sub-crates take standalone
# Greek names. Names below are all ASCII transliterations of Greek
# words named for what each crate does (themelion = θεμέλιον,
# foundation; mekhane = μηχανή, stage machinery; skeue = σκευή,
# props/equipment; gramma = γράμμα, written character; keryx = κῆρυξ,
# herald/messenger; bathron = βάθρον, pedestal; parodos = πάροδος,
# stage entrance; dokimasia = δοκιμασία, examination).
themelion = { version = "0.1.0", path = "crates/themelion" }
bathron = { version = "0.1.0", path = "crates/bathron" }
keryx = { version = "0.1.0", path = "crates/keryx" }
skeue = { version = "0.1.0", path = "crates/skeue" }
gramma = { version = "0.1.0", path = "crates/gramma" }
mekhane = { version = "0.1.0", path = "crates/mekhane" }
parodos = { version = "0.1.0", path = "crates/parodos" }
dokimasia = { version = "0.1.0", path = "crates/dokimasia" }

# UI framework
# WHY: Pin dioxus to an exact patch version, fleet-wide. Dioxus
# `EventHandler<T>` (and other types parameterized over user types) is
# a different concrete type at every patch release; if theatron and a
# downstream consumer (proskenion, future chalkeion) resolve to
# different patches, trait resolution breaks across the crate boundary
# even though both compile in isolation. Caught by QA wave 2 #22 (M-10).
# Bump deliberately, never via auto-resolution. proskenion/Cargo.toml
# uses the same exact pin.
dioxus = "=0.7.6"
dioxus-core = "=0.7.6"
dioxus-hooks = "=0.7.6"
dioxus-native = "=0.7.6"

# OS integration crates (used by mekhane).
tray-icon = "0.21"

# Network / streaming
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
eventsource-stream = "0.2"
bytes = "1"
futures-core = "0.3"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"

# Markdown / syntax highlighting
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-onig"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
snafu = "0.8"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Lint (dokimasia)
syn = { version = "2", features = ["full", "parsing", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
regex = "1"
ignore = "0.4"
codespan-reporting = "0.11"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
