[package]
name = "bathron"
description = "βάθρον (pedestal/base) — OS-service integration: notifications, file dialogs, window state persistence, settings, autoupdate, logging. Tray + hotkeys live in mekhane (windowing layer)."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
