[package]
name = "dokimasia"
description = "δοκιμασία (examination/scrutiny) — design-token + standards enforcement linter. Fails CI when CSS or Rust references tokens not declared in DESIGN-TOKENS.md."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "dokimasia"
path = "src/lib.rs"

[[bin]]
name = "dokimasia"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
codespan-reporting = { workspace = true }
ignore = { workspace = true }
proc-macro2 = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
syn = { workspace = true }
toml = { workspace = true }

[package.metadata.kanon]
maturity = "production"
since = "2026-05-02"
exit-criteria = "maintain SemVer-stable lint behavior and consumer gate coverage"
