[package]
name = "gramma"
description = "γράμμα (written character) — syntect-backed syntax spans and structured diff parsing for UI renderers."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
syntect = { workspace = true }

[package.metadata.kanon]
maturity = "production"
since = "2026-05-02"
exit-criteria = "theatron v2.0 SemVer boundary"
