[package]
name = "gramma"
description = "γράμμα (written character) — syntax highlighting spans + structured diff parsing. syntect-backed; pure data structures for UI renderers."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
syntect = { workspace = true }
