[package]
name = "keryx"
description = "κῆρυξ (herald/messenger) — HTTP client base: response classification, owned SSE wire-protocol parser, ApiError retryability, URL path helpers."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
