[package]
name = "parodos"
description = "πάροδος (chorus's stage entrance) — terminal UI substrate: Ratatui primitives + Elm state/update/view dispatcher. Extracted from aletheia/koilon Phase 1+2."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
