[package]
name = "parodos"
description = "πάροδος (chorus's stage entrance) — terminal UI substrate: Ratatui primitives + Elm state/update/view dispatcher. Extracted from aletheia/koilon Phase 1+2."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bench]]
name = "fuzzy"
path = "benches/fuzzy.rs"
harness = false

[[bench]]
name = "hyperlink"
path = "benches/hyperlink.rs"
harness = false

[[bench]]
name = "sanitize"
path = "benches/sanitize.rs"
harness = false

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }

# Wave 2 extraction (theme, highlight, sanitize, clipboard, hyperlink)
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
regex = { workspace = true }
syntect = { workspace = true }
tracing = { workspace = true }
unicode-width = "0.2"

[dev-dependencies]
criterion = { workspace = true }
