[package]
name = "skeue"
description = "σκευή (props/equipment) — generic Dioxus UI components."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
gramma = { workspace = true }

dioxus = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dioxus-ssr = "=0.7.6"

[package.metadata.kanon]
maturity = "production"
since = "2026-05-02"
exit-criteria = "maintain SemVer-stable public API and consumer gate coverage"
