[package]
name = "skeue"
description = "σκευή (props/equipment) — generic Dioxus components per kanon DESIGN-TOKENS.md: status pill, metric tile, activity row, queue table, sparkline, conn status, toast, virtual list, diff hunk, diff line, code block, badge, spinner, empty state, error state, markdown table."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
gramma = { workspace = true }

dioxus = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dioxus-ssr = "=0.7.6"
