[package]
name = "theatron-blitz"
description = "Dioxus + Blitz integration helpers, upstream-contribution glue, version pins"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true }
dioxus-native = { workspace = true }
