[package]
name = "theatron-components"
description = "Generic Dioxus components per kanon DESIGN-TOKENS.md: status pill, metric tile, activity row, queue table, sparkline, conn status, toast, modal, sidebar, tab bar, virtual list, command palette, diff hunk"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true }
pulldown-cmark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
