[package]
name = "theatron-core"
description = "Theatron — fleet desktop UI infrastructure: window lifecycle, theme provider, routing scaffolding, error boundary, settings persistence, logging setup"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
