[package]
name = "theatron-lint"
description = "Design-token enforcement linter — parses CSS + Rust component code; fails on undocumented tokens. Folds in #41."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
