[package]
name = "theatron-lint"
description = "Design-token enforcement linter — fails CI when CSS or Rust code references tokens not declared in DESIGN-TOKENS.md."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
name = "theatron_lint"
path = "src/lib.rs"

[[bin]]
name = "theatron-lint"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
codespan-reporting = { workspace = true }
ignore = { workspace = true }
proc-macro2 = { workspace = true }
pulldown-cmark = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
syn = { workspace = true }
