[package]
name = "theatron-net"
description = "HTTP client base, SSE/streaming via reqwest+tokio+eventsource-stream pattern, mDNS discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
dioxus = { workspace = true }
eventsource-stream = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
