[package]
name = "theatron-platform"
description = "OS integration: tray icon, global hotkeys, native menus, notifications, file dialogs, window state persistence"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
