[package]
name = "themelion"
description = "θεμέλιον (foundation) — theme provider and OS preference detection for Dioxus + Blitz fleet desktop apps."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
