[package]
name = "themelion"
description = "θεμέλιον (foundation) — theme provider and OS preference detection for Dioxus + Blitz fleet desktop apps."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
dioxus = { workspace = true }

[package.metadata.kanon]
maturity = "production"
since = "2026-05-02"
exit-criteria = "v2.0 policy revision or deprecation issue changes the public API maturity contract"
