[package]
name = "themelion"
description = "θεμέλιον (foundation) — theme provider and OS preference detection for Dioxus + Blitz fleet desktop apps."
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
# WHY: parodos (terminal substrate) consumes the canonical ThemeMode /
# ResolvedTheme vocabulary without pulling the Dioxus GUI stack. The
# provider components (ThemeProvider, ThemeToggle) are gated; the pure
# theme types are always available.
default = ["dioxus"]
dioxus = ["dep:dioxus"]

[dependencies]
dioxus = { workspace = true, optional = true }

[dev-dependencies]
dioxus-ssr = "=0.7.6"
